tests/fixtures/valid/from_import.py
from os import environ  # Check 1

from os import environ  # Check 2

"""
Lorem ipsum dolor sit amet
"""
from os import environ  # Check 3

# Lorem ipsum dolor sit amet
from os import environ  # Check 4

if 1 == 1:  # Check 5
    from os import environ

    from os import environ
elif 2 == 2:
    from os import environ

    from os import environ
else:
    from os import environ

    from os import environ

for i in [1, 2]:  # Check 6
    from os import environ

    from os import environ
else:
    from os import environ

    from os import environ

while True:  # Check 7
    from os import environ

    from os import environ
else:
    from os import environ

    from os import environ

try: # Check 8
    from os import environ

    from os import environ
except Exception:
    from os import environ

    from os import environ
finally:
    from os import environ

    from os import environ
